--- a/client/package.json
+++ b/client/package.json
@@ -1,20 +1,17 @@
 {
-  "name": "client",
+  "name": "Medscribe",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^16.11.19",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
+    "classnames": "^2.3.1",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-query": "^3.34.8",
     "react-scripts": "5.0.0",
-    "typescript": "^4.5.4",
+    "sass": "^1.48.0",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.3"
   },
@@ -22,9 +19,7 @@
     "start": "react-scripts start",
     "build": "npm run build:css && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "watch:css": "TAILWIND_MODE=watch postcss src/App.pcss -o src/App.css --watch",
-    "build:css": "postcss src/App.pcss -o src/App.css --minify"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -43,13 +38,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/uuid": "^8.3.4",
-    "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.5",
-    "postcss-cli": "^9.1.0",
-    "postcss-import": "^14.0.2",
-    "tailwindcss": "^3.0.13"
   }
 }
