--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "@types/node": "^17.0.8",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
-    "react": "^17.0.2",
-    "typescript": "^4.5.4"
+    "react": "^17.0.2"
   },
   "devDependencies": {
     "create-react-app": "^5.0.0",
