--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-select-search": "^3.0.9",
     "sass": "^1.48.0",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.3"
