--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "camelcase": "^6.3.0",
     "classnames": "^2.3.1",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
+    "react-datetime": "^3.1.1",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "react-select-search": "^3.0.9",
