--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "5.0.0",
     "react-select-search": "^3.0.9",
     "sass": "^1.48.0",
+    "ulog": "^2.0.0-beta.19",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.3"
   },
