Debounce and optimistically update inputs
* Add robust opitmistic updates to the client side cache
* Debounce calls to the actual api
* Update local cache when api mutation returns

--- a/services/json-server/package.json
+++ b/services/json-server/package.json
@@ -5,7 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx json-server --watch db.json --host localhost --port 3001",
+    "reset": "cp db.back db.json"
   },
   "author": "Joshua Moyers",
   "license": "UNLICENSED",
