--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "awesome-debounce-promise": "^2.1.0",
     "axios": "^0.25.0",
     "camelcase": "^6.3.0",
     "classnames": "^2.3.1",
