--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.25.0",
     "camelcase": "^6.3.0",
     "classnames": "^2.3.1",
+    "clipboard-copy": "^4.0.1",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-datetime": "^3.1.1",
