--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-datetime": "^3.1.1",
     "react-dom": "^17.0.2",
     "react-query": "^3.34.12",
+    "react-responsive": "^9.0.0-beta.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-select-search": "^3.0.9",
