--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-responsive": "^9.0.0-beta.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-select": "^5.2.2",
     "react-select-search": "^3.0.9",
     "sass": "^1.48.0",
     "ulog": "^2.0.0-beta.19",
