--- a/client/src/icons/config.json
+++ b/client/src/icons/config.json
@@ -119,6 +119,24 @@
       "css": "lock",
       "code": 59410,
       "src": "entypo"
+    },
+    {
+      "uid": "289b5f92f23acf1059c93fbf401c1ad5",
+      "css": "down-open-big",
+      "code": 59411,
+      "src": "entypo"
+    },
+    {
+      "uid": "14017aae737730faeda4a6fd8fb3a5f0",
+      "css": "check",
+      "code": 59412,
+      "src": "entypo"
+    },
+    {
+      "uid": "e8239f8188c76c925be4bd1bbcc013ac",
+      "css": "erase",
+      "code": 59413,
+      "src": "entypo"
     }
   ]
 }
